# rs-weight-tracker

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
data/: routes-test.md  sample_data.json
docs/: deploying.md  session-1.md  session-2.md  session-3.md  session-4.md  session-5.md  session-6.md  session-7.md  step-by-step.md
migrations/2023-02-21-164500_create_weights/: down.sql  up.sql
migrations/2023-02-22-103511_dateonly/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
static/: add-weight.html  index.html  style.css
