[package]
name = "rs-weight-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
diesel = { version = "2.0.3", features = ["chrono", "sqlite"] }
dotenv = "0.15.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
rocket = { version = "0.5.0-rc.2", features = ["tls", "mtls", "json"] }


