[package]
name = "rs-weight-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
diesel = { version = "2.0.3", features = ["chrono", "sqlite"] }
dotenv = "0.15.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
axum = "0.6.9"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
